--- a/contacts.html
+++ b/contacts.html
@@ -90,6 +90,7 @@
     <footer class="bg-dark"></footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
+    <script src="data.js"></script>
 </body>
 
 </html>
