--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <section></section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
+    <script src="data.js"></script>
 </body>
 
 </html>
